# omnichain-carbon-platform

./: .gitignore  index.html  next.config.js  package-lock.json  package.json
.next/: app-build-manifest.json  trace
.next/server/: app-paths-manifest.json  next-font-manifest.js  next-font-manifest.json  server-reference-manifest.json  webpack-runtime.js
.next/server/vendor-chunks/: @babel.js  @floating-ui.js  @radix-ui.js  @supabase.js  @swc.js  @tanstack.js  aria-hidden.js  attr-accept.js  class-variance-authority.js  clsx.js  crypto-js.js  d3-array.js  d3-color.js  d3-format.js  d3-interpolate.js  d3-path.js  d3-scale.js  d3-shape.js  d3-time-format.js  d3-time.js  date-fns.js  decimal.js-light.js  eventemitter3.js  fast-equals.js  file-selector.js  get-nonce.js  internmap.js  isows.js  lodash.js  lucide-react.js  next.js  object-assign.js  papaparse.js  prop-types.js  react-dropzone.js  react-is.js  react-remove-scroll-bar.js  react-remove-scroll.js  react-smooth.js  react-style-singleton.js  (+15 more)
.next/static/chunks/: app-pages-internals.js  webpack.js
.next/static/webpack/: webpack.3de0557858b52568.hot-update.js  webpack.a943962a5a038fb6.hot-update.js
solana/: .env.example  .gitignore  Anchor.toml  Cargo.toml  README.md  package.json  rust-toolchain.toml
solana/programs/carbon-certificate-oapp/: Cargo.toml
solana/programs/carbon-certificate-oapp/src/: lib.rs
solana/programs/carbon-credit-oft/: Cargo.toml
solana/programs/carbon-credit-oft/src/: lib.rs
solana/tests/: carbon-certificate-oapp.ts  carbon-credit-oft.ts
src/api/: server.ts
src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
src/components/: providers.tsx
src/hooks/: use-api.ts  use-auth.ts
src/lib/: api-client.ts  auth.ts  emissions-calculator.ts  supabase.ts
(+40 files in other folders)
