[workspace]
members = [
    "programs/carbon-certificate-oapp",
    "programs/carbon-credit-oft"
]
resolver = "2"

[workspace.dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
borsh = "0.10.3"
solana-program = "=1.17.31"
solana-sdk = "=1.17.31"
solana-zk-token-sdk = "=1.17.31"
solana-frozen-abi = "=1.17.31"
solana-frozen-abi-macro = "=1.17.31"
solana-logger = "=1.17.31"
solana-sdk-macro = "=1.17.31"
num_enum = "0.6.1"
num_enum_derive = "0.6.1"
spl-associated-token-account = "=1.1.2"
spl-token = "=3.5.0"
spl-token-2022 = "=0.6.0"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

