[package]
name = "carbon-certificate-oapp"
version = "0.1.0"
description = "LayerZero V2 OApp for cross-chain carbon certificate verification"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "carbon_certificate_oapp"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
borsh = { workspace = true }